[tool.poetry]
name = "iccme"
version = "0.3.0"
description = "batch apply ICC profiles to images"
authors = ["Bobo Li <bobo@photolaundrysf.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Wand = "^0.6.13"


[tool.poetry.scripts]
iccme = "iccme.iccme:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
